# ufmt

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_docs.sh  rebuild.sh  run_benchmarks.sh  run_demos.sh  run_tests.sh  run_ustr_demo.sh
.github/workflows/: ci.yml
demos/: benchmark_basic.cpp  benchmark_multithreading.cpp  demo_basic.cpp  demo_multithreading.cpp  demo_transparent_api.cpp  demo_ustr_integration.cpp
docs/: Doxyfile  mainpage.dox
include/ufmt/: ufmt.h
tests/: test_multithreading.cpp  test_ufmt.cpp
